# chess-engine

./: .clang-format  .clangd  CMakeLists.txt  Makefile  ]
include/: board.hpp  board_position.hpp  chess_app.hpp  chess_controller.hpp  chess_model.hpp  chess_view.hpp  color.hpp  config.hpp  controller.hpp  engine_controller.hpp  human_controller.hpp  move.hpp  piece_square_tables.hpp  piece_type.hpp  texture_manager.hpp  uistate.hpp
include/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
src/: board.cpp  chess_app.cpp  chess_controller.cpp  chess_model.cpp  chess_view.cpp  engine_controller.cpp  main.cpp  move.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
test/: main.cpp
